--- a/mongod.cfg
+++ b/mongod.cfg
@@ -1,3 +1,3 @@
-logpath:L:\Happiness\mongodb\logs\log.txt
-logappend:true
-dbpath:L:\Happiness\mongodb\data
+logpath="L:\Happiness\mongodb\logs\log.txt"
+logappend=true
+dbpath="L:\Happiness\mongodb\data"
